--- a/css/fotos.css
+++ b/css/fotos.css
@@ -33,7 +33,7 @@ ul#albun-fotos li:hover {
     -webkit-transform:scale(1.5);
 }
 ul#albun-fotos li#foto01 {
-    background: url('../_imagens/galeria-01.jpg') no-repeat;
+    background: url('../imagens/galeria-01.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -45,7 +45,7 @@ ul#albun-fotos li#foto01:hover {
     background-size: 200px 200px;
 }
 ul#albun-fotos li#foto02 {
-    background: url('../_imagens/galeria-02.jpg') no-repeat;
+    background: url('../imagens/galeria-02.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -58,7 +58,7 @@ ul#albun-fotos li#foto02:hover {
 
 
 ul#albun-fotos li#foto03 {
-    background: url('../_imagens/galeria-03.jpg') no-repeat;
+    background: url('../imagens/galeria-03.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -70,7 +70,7 @@ ul#albun-fotos li#foto03:hover {
 
 
 ul#albun-fotos li#foto04 {
-    background: url('../_imagens/galeria-04.jpg') no-repeat;
+    background: url('../imagens/galeria-04.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -81,7 +81,7 @@ ul#albun-fotos li#foto04:hover {
 }
 
 ul#albun-fotos li#foto05 {
-    background: url('../_imagens/galeria-05.jpg') no-repeat;
+    background: url('../imagens/galeria-05.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -92,7 +92,7 @@ ul#albun-fotos li#foto05:hover {
 }
 
 ul#albun-fotos li#foto06 {
-    background: url('../_imagens/galeria-06.jpg') no-repeat;
+    background: url('../imagens/galeria-06.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
