--- a/css/fotos.css
+++ b/css/fotos.css
@@ -33,7 +33,7 @@ ul#albun-fotos li:hover {
     -webkit-transform:scale(1.5);
 }
 ul#albun-fotos li#foto01 {
-    background: url('../imagens/galeria-01.jpg') no-repeat;
+    background: url('..imagens/galeria-01.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
